Updated website content and replaced old code

--- a/omema project/contact.html
+++ b/omema project/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get in touch with Cozy Café in Karachi. Find our café location, opening hours, and contact details — we’re here to serve your favorite coffee and desserts.">
-  <title>Contact Cozy Café | Visit Us or Order Coffee in Karachi</title>
+<meta name="description" content="Contact Cozy Café Karachi for reservations, orders, or inquiries. Find our location, timings, and phone details — we’re always ready to serve your favorite coffee, snacks, and desserts in a cozy, welcoming space.">
+<title>Contact Cozy Café | Visit Us or Order Coffee in Karachi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="style.css" />
@@ -46,7 +46,7 @@
   <section class="contact-hero">
     <div class="overlay">
       <h1>Get in Touch ☕</h1>
-      <p>We’d love to hear from you! Let’s stay connected.</p>
+      <p>"Get in touch today and experience the warm hospitality of Cozy Café Karachi."</p>
     </div>
   </section>
 
